# AI_project

./: .gitignore  Dockerfile.test  Makefile  README.md  docker-compose.yml  makefile  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/tests/: conftest.py  test_api.py  test_model.py
frontend/: DockerFile  DockerFile.dockerfile  README.md
frontend/src/: App.css  App.js
