[project]
name = "ai-project"
version = "0.1.0"
description = ""
authors = [
    {name = "m.shkut",email = "m.shkut@tbank.ru"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "fastapi (>=0.119.1,<0.120.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "transformers (>=4.57.1,<5.0.0)",
    "torch (>=2.9.0,<3.0.0)"
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"